--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -183,10 +183,11 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  transition: transform 0.3s ease;
+  transition: transform 0.3s ease, opacity 0.3s ease;
   position: relative;
   /* Allow inline background-image styles to work properly */
   background-color: rgba(99, 102, 241, 0.1);
+  opacity: 0.85;
 }
 
 /* Ensure post-image can have background-image despite other rules - REMOVED CONFLICTING RULE */
@@ -288,6 +289,7 @@ div.post-image[style*="background-image: url"] {
 
 .post-card:hover .post-image {
   transform: scale(1.05);
+  opacity: 1.0;
 }
 
 .post-placeholder-image {
