Major update - dark mode

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,6 +4,9 @@
       <a href="{{ "/" | relative_url }}" class="site-title">Robotics & Artificial Intelligence</a>
       <nav class="site-nav">
         {% include navigation.html %}
+        <button id="theme-toggle" class="theme-toggle" aria-label="Toggle Dark Mode">
+          <span class="theme-toggle-icon">🌓</span>
+        </button>
       </nav>
       <div class="clearfix"></div>
       {% if site.show_social_icons %}
